@@ -1024,6 +1024,7 @@ unphysical point.}
   \begin{tabular}{ll}
     general option & description \\
     \hline
+    \code{--tol=<value>} & numerical convergence precision \\
     \code{--mbmb=<value>} & bottom mass $m_b^{\overline{MS}}(m_b)$ \\
     \code{--mt=<value>} & top mass $m_t^\text{pole}$ \\
     \code{--alpha\_s=<value>} & strong coupling $\alpha_s^{\overline{MS}}(M_Z)$ \\
