@@ -1,35 +1,36 @@
+% omega_{CDM h^2}=1.220000e-01
 \begin{table}
 \begin{center}
 \begin{tabular}{|c|c|ccccccc|}\hline
 Threshold & RGEs  & $m_h$  & $m_{\tilde g}$ & $m_{{\tilde q}}$ & $m_{\chi_1^0}$  & $m_{\chi_2^0}$ & $m_{\chi_3^0}$ & $m_{\chi_4}^0$ \\ \hline
-None               & 2 & 125.0 & 2014 & 7283 &  364 &  705 & 1318 &1323\\
-$\Delta \alpha_s$  & 2 &  +0.6 & -49.3 &  -2.3 &  +1.7 &  +5.0 & +553.3 &+550.8\\
+None               & 2 & 125.0 & 2015 & 7322 &  364 &  705 & 1298 &1303\\
+$\Delta \alpha_s$  & 2 &  +0.6 & -49.4 &  -2.2 &  +1.7 &  +5.2 & +565.0 &+562.4\\
 $\Delta m_t$      & 2 & N/A & N/A & N/A & N/A & N/A & N/A & N/A  \\
-$\Delta m_b, m_\tau$& 2 &  +0.1 &  -0.6 &  -0.5 &  -0.1 &  -0.1 & +23.8 &+23.6\\
-$\Delta$ All      & 3 &  -2.7 & -49.7 &  -6.7 &  -9.8 & -243.4 & -850.0 &-601.9\\
+$\Delta m_b, m_\tau$& 2 &  +0.1 &  -0.6 &  -0.5 &  -0.1 &  -0.1 & +24.3 &+24.1\\
+$\Delta$ All      & 3 &  -2.6 & -49.5 &  -6.6 & -18.8 & -294.1 & -883.1 &-583.9\\
 
 %
 \hline&& $m_{{\tilde t}_L}$  & $m_{{\tilde t}_R}$ &$m_{{\tilde b}_L}$&$m_{{\tilde b}_R}$&$m_{{\tilde \tau}_L}$&$m_{{\tilde \tau}_R}$&$m_{\chi_1}^\pm$ \\ \hline
-None             & 2 &4920 & 4190 & 4915 & 5530 & 6229 & 5063 & 705\\
-$\Delta \alpha_s$  & 2 & -68.3 & -137.8 & -68.1 & -18.1 &  +0.7 &  +1.7 & +5.0\\
+None             & 2 &4948 & 4216 & 4943 & 5559 & 6265 & 5095 & 705\\
+$\Delta \alpha_s$  & 2 & -68.3 & -138.6 & -68.2 & -17.7 &  +0.7 &  +1.6 & +5.2\\
 $\Delta m_t$      & 2 & N/A & N/A & N/A & N/A & N/A & N/A & N/A \\
-$\Delta m_b, m_\tau$& 2 & +57.1 &  -4.8 & +57.5 & +106.7 &  +3.7 &  +9.9 & -0.1\\
-$\Delta$ All      & 3 &  +8.2 & +95.2 &  +8.2 & -61.5 &  +6.3 & +14.8 &-250.4\\
+$\Delta m_b, m_\tau$& 2 & +58.1 &  -4.8 & +58.4 & +108.4 &  +3.8 & +10.2 & -0.1\\
+$\Delta$ All      & 3 &  +6.7 & +94.6 &  +6.8 & -63.7 &  +6.7 & +15.8 &-305.6\\
 
 %
 \hline      &  & $g_3(M_{SUSY})$ & $Y_t(M_{SUSY})$ &  $Y_b(M_{SUSY})$ & $Y_\tau(M_{SUSY})$  & $\mu(M_{SUSY})$    & $\Omega_{CDM} h^2$ & $\sigma_{SUSY}^{TOT}$\\ \hline
- None                   & 2 & 1.002 & 0.815 & 0.635 & 0.512 & 1298 &  96.3 &  -1.0\\
-$\Delta \alpha_s$  & 2 & -0.020 & +0.011 & -0.002 & +0.000 & +552 & +253.7 &  +0.0\\
+ None                   & 2 & 1.001 & 0.815 & 0.636 & 0.512 & 1278 &  91.0 &   1.2\\
+$\Delta \alpha_s$  & 2 & -0.020 & +0.011 & -0.002 & +0.000 & +564 & +255.0 &  +0.4\\
 $\Delta m_t$      & 2 & N/A & N/A & N/A & N/A & N/A & N/A& N/A\\
-$\Delta m_b, m_\tau$& 2 & -0.000 & -0.000 & -0.020 & -0.001 &  +23 & +10.700 &  +0.0\\
-$\Delta$ All      & 3 & -0.020 & -0.020 & +0.003 & -0.001 & -845 & -95.8 & +0.0\\
+$\Delta m_b, m_\tau$& 2 & -0.000 & -0.000 & -0.020 & -0.001 &  +24 & +11.000 &  +0.0\\
+$\Delta$ All      & 3 & -0.020 & -0.020 & +0.004 & -0.001 & -881 & -90.9 & +0.4\\
 
 %
-\hline&& $M_{GUT}/10^{16}$& $1/\alpha_{GUT}$&$\Delta (\alpha)$ & $\Delta Y_{b\tau}$ & $\Delta Y_{tb}$&& \\ \hline None                   & 2 & 1.667 & 25.704 & -0.000 & -0.132 & 0.167& & \\
-$\Delta \alpha_s$  & 2 &  -0.036 &  0.046 &  -0.001 & -0.124 &0.197 & & \\
+\hline&& $M_{GUT}/10^{16}$& $1/\alpha_{GUT}$&$\Delta (\alpha)$ & $\Delta Y_{b\tau}$ & $\Delta Y_{tb}$&& \\ \hline None                   & 2 & 1.669 & 25.704 & -0.000 & -0.132 & 0.167& & \\
+$\Delta \alpha_s$  & 2 &  -0.037 &  0.046 &  -0.001 & -0.123 &0.197 & & \\
 $\Delta m_t$  & 2 & N/A & N/A & N/A & N/A &N/A  & &\\
 $\Delta m_b,m_\tau$  & 2 &  0.001 &  -0.001 &  -0.000 & -0.143 &0.184 & & \\
-$\Delta$ All  & 3 &  0.085 &  -0.070 &  -0.001 & -0.121 &0.140 & & \\
+$\Delta$ All  & 3 &  0.097 &  -0.078 &  -0.001 & -0.120 &0.140 & & \\
 \hline
 \end{tabular}
 \end{center}
