@@ -1,3 +1,15 @@
+@article{Borowka:2014wla,
+      author         = "Borowka, S. and Hahn, T. and Heinemeyer, S. and Heinrich,
+                        G. and Hollik, W.",
+      title          = "{Momentum-dependent two-loop QCD corrections to the
+                        neutral Higgs-boson masses in the MSSM}",
+      year           = "2014",
+      eprint         = "1404.7074",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MPP-2014-160",
+      SLACcitation   = "%%CITATION = ARXIV:1404.7074;%%",
+}
 @article{Buchmueller:2011ab,
       author         = "Buchmueller, O. and Cavanaugh, R. and De Roeck, A. and
                         Dolan, M.J. and Ellis, J.R. and others",
