@@ -18,7 +18,8 @@
 \begin{frontmatter}
 
 \begin{flushright}
-DAMTP-2014-??
+DAMTP-2014-??//
+IFIC/14-47
 \end{flushright}
 
 \title{Higher Order Corrections and Unification in
@@ -407,7 +408,7 @@ $m_\tau=1.77699$ GeV.
   (three-loop 
   RGEs for gauge and Yukawa couplings and two-loop threshold corrections to
   third family fermion masses and $g_3$) on various predicted quantities 
-  in the focus point of the CMSSM for $m_0=7200$ GeV, $M_{1/2}=800$ GeV,
+  in the focus point of the CMSSM for $m_0=7340$ GeV, $M_{1/2}=800$ GeV,
   $A_0=-6000$ GeV, $\tan \beta=50$, $\mu>0$.
   We display massive quantities in units of GeV.
   The first column details which higher order threshold corrections are
@@ -434,10 +435,11 @@ $m_\tau=1.77699$ GeV.
 \end{table}
 In Table~\ref{tab:cmssm}, we show the effects of the higher order terms on a
 CMSSM parameter point that is in the high $\tan \beta$ focus point region:
-($m_0=7200$ GeV, $M_{1/2}=800$ GeV, $A_0=-6000$ GeV,
+($m_0=7340$ GeV, $M_{1/2}=800$ GeV, $A_0=-6000$ GeV,
 $\tan \beta=50$, $\mu>0$) with 
-rather attractive properties: it has a high lightest CP even Higgs mass of
-122.3 GeV, within $1\sigma$ of the experimental
+some rather attractive phenomenological properties: it has a high lightest CP
+even Higgs mass of 
+122.4 GeV, within $1\sigma$ of the experimental
 central value, once theoretical uncertainties (estimated to be around $\pm3$
 GeV~\cite{Allanach:2004rh}) 
 have been taken into account.
@@ -503,12 +505,12 @@ mass (which, in the CMSSM at high masses, acts to a good approximation with
 identical couplings to the Standard Model Higgs)
 to within the one 1$\sigma$ level according to the {\tt SOFTSUSY3.4.1}
 calculation. However, one would discard the point based on the predicted value
-of 96.3 for $\Omega_{CDM} h^2$, which disagrees with the cosmologically inferred
+of 91.0 for $\Omega_{CDM} h^2$, which disagrees with the cosmologically inferred
 value by hundreds of sigma. On the other hand, including all of the high order
 corrections (`$\Delta$ All'), we see that the Higgs mass prediction lowers
 somewhat, and 
 the dark matter 
-relic density is predicted to be the cosmologically acceptable value of 0.099
+relic density is predicted to be the cosmologically acceptable value of 0.122
 once all of the higher order corrections are included.
 Here, we use {\tt
   micrOMEGAs3.3.13}~\cite{Belanger:2001fz,Belanger:2004yn,Belanger:2013oya} to 
@@ -567,7 +569,7 @@ higgsino-bino dark matter with an observationally acceptable predicted value.
 In the literature,  a value of 2-3 GeV is often quoted as the spectrum
 calculators' theoretical uncertainty on the prediction of $m_h$. We see that
 this is borne out in our CMSSM model, where the higher order corrections give
-a 2.7 GeV shift in the prediction.
+a 2.6 GeV shift in the prediction.
 
 Two-loop threshold corrections to the strong gauge coupling have a significant
 effect upon some of the sparticle masses: particularly $m_{\chi_3^0}$ and
@@ -1024,7 +1026,7 @@ incorrectly. Ideally, the fit would be performed including a calculated
  prediction. 
  In order to predict the Higgs masses with the highest available accuracy, one
  should use {\tt SOFTSUSY} in conjunction with a recent version of {\tt
-   FeynHiggs}, which contains direct higher order threshold corrections to the
+   FeynHiggs}~\cite{Borowka:2014wla}, which contains direct higher order threshold corrections to the
  Higgs masses. 
 
  There has been attention in the literature 
@@ -1154,7 +1156,7 @@ been compiled as specified above).
 Thus, in order to produce the spectrum detailed in the $\Delta(\mbox{all})$
 row of Table~\ref{tab:cmssm}, one may use the command with {\tt SOFTSUSY3.5.0}:
 {\small\begin{verbatim}
-./softpoint.x sugra --m0=7200 --m12=800 --a0=-6000 --tanBeta=50 --sgnMu=1 --mt=173.2 --alpha_s=0.1187 
+./softpoint.x sugra --m0=7340 --m12=800 --a0=-6000 --tanBeta=50 --sgnMu=1 --mt=173.2 --alpha_s=0.1187 
 --two-loop-susy-thresholds --three-loop-rges
 \end{verbatim}\normalsize}
 For the calculation
